# swhook

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
etc/: hello_world  swhook.conf  swhook.service
src/: config.rs  main.rs  method.rs  server.rs
src/commands/: commands.rs  mod.rs  reload.rs  server.rs  stop.rs
