[package]
name = "swhook"
version = "0.0.1"
edition = "2024"
description = "A minimalistic Webhook server"
license = "GPL-3-or-later"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
tokio = { version = "1.49.0", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal"] }
toml = "1.0.3"
url = "2.5.8"
